Exercise 6 has changed, new exercise added!

--- a/06-app_visitantes2/cliente/.babelrc
+++ b/06-app_visitantes2/cliente/.babelrc
@@ -5,6 +5,7 @@
         {
           "useBuiltIns": "usage",
           "debug": true,
+          "corejs": 3,
           "targets": "last 2 versions, not dead, > 20%"
         }
       ],
