--- a/06-app_visitantes2/servidor/.gitignore
+++ b/06-app_visitantes2/servidor/.gitignore
@@ -1,11 +1,4 @@
 node_modules
-publico/bundle.js
-publico/*.svg
-publico/*.ttf
-publico/*.eot
-publico/*.woff
-publico/*.woff2
-publico/*.gif
-publico/*.png
+publico
 build
 package-lock.json
